Fri May 30 11:00:59 GMT 2008  Richard Boulton <richard@lemurconsulting.com>

	* xappy/indexerconnection.py,xappy/searchconnection.py,
	  xappy/unittests/facet_hierarchy_1.py: Allow multiple parent
	  facets to be defined for each child.

Mon May 12 19:58:34 GMT 2008  Richard Boulton <richard@lemurconsulting.com>

	* docs/introduction.rst: Add documentation of the WEIGHT action.
	* xappy/fieldactions.py: Convert field values for WEIGHT fields to
	  float before storing them.

Mon May 12 18:32:14 GMT 2008  Richard Boulton <richard@lemurconsulting.com>
 
	* xappy/fieldactions.py: Fix typo.
	* xappy/searchconnection.py: Add support for ranking search results
	  using weight fields. Also, add get_max_possible_weight(query) to
	  assist in balancing the weights returned by different query
	  components.
	* xappy/unittests/weight_action.py: Add test of "WEIGHT" action.

Mon May 12 13:16:33 GMT 2008  Richard Boulton <richard@lemurconsulting.com>

	* libs/get_xapian.py,utils/make_xappy_tarballs,xappy/_checkxapian.py,
	  xappy/doctests/searchconnection_doctest2.txt,xappy/fieldactions.py,
	  xappy/indexerconnection.py,xappy/searchconnection.py: Add links
	  to new xapian packages with support for ValueWeightPostingSource.
	  Tidy up error handling in search and indexer connections if an
	  error occurs while reading the configuration.  Update a test case
	  which has slightly different behaviour with the new xapian.  Add
	  support for "WEIGHT" action for fields when indexing (no
	  corresponding support at search time yet, so this isn't useful
	  currently).

Wed May 07 22:34:59 GMT 2008  Richard Boulton <richard@lemurconsulting.com>

	* setup.py,testsuite/coverage.py,testsuite/runtests.py,xappy/test.py:
	  Reorganise test runners, so that "eggsetup.py test" actually
	  works.

Wed May 07 14:25:54 GMT 2008  Richard Boulton <richard@lemurconsulting.com>

	* testsuite/coverage.py: Update with changes from latest upstream.
