@@ -48,7 +48,7 @@ class IndexerConnection(object):
         If the database doesn't already exist, it will be created.
 
         """
-        self._index = log(xapian.WritableDatabase, indexpath, xapian.DB_CREATE_OR_OPEN)
+        self._index = log(xapian.flint_open, indexpath, xapian.DB_CREATE_OR_OPEN)
         self._indexpath = indexpath
 
         # Read existing actions.
@@ -153,7 +153,7 @@ class IndexerConnection(object):
                 parents = self._facet_hierarchy[key]
                 if isinstance(parents, basestring):
                     parents = [parents]
-                    self._facet_hierarchy[subfacet] = parents
+                    self._facet_hierarchy[key] = parents
         except ValueError:
             # Backwards compatibility - configuration used to lack _facet_hierarchy and _facet_query_table
             (self._field_actions, mappings, self._next_docid) = cPickle.loads(config_str)
